Fix bug in card display on small screen (#54)
* final fixes in accessibility and folder structure

* fix alt text on images and icons + typo in aria-label

* remove last comments and console logs

* fix list in heroNavBar to improve accessibility

* fix cards being centered on small screens on startpage

--- a/src/components/footer/Footer.css
+++ b/src/components/footer/Footer.css
@@ -4,11 +4,12 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  margin: 2rem;
   color: #214720;
   font-size: 20px;
   font-weight: 500;
   line-height: 24px;
+  margin: 2rem;
+  text-align: center;
 }
 .footer a {
   text-decoration: none;
